--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <ul>MyTicTacToe.com</ul>
     </div>
     <div class="gameContainer">
-        <div class="container">
+        <div class="container" id="containerBox">
+
             <div class="box bt-0 bl-0"><span class="boxtext"></span></div>
             <div class="box bt-0"><span class="boxtext"></span></div>
             <div class="box bt-0 br-0"><span class="boxtext"></span></div>
