--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <ul>MyTicTacToe.com</ul>
     </div>
     <div class="gameContainer">
+
         <div class="container" id="containerBox">
 
             <div class="box bt-0 bl-0"><span class="boxtext"></span></div>
@@ -24,7 +25,7 @@
             <div class="box bl-0 bb-0"><span class="boxtext"></span></div>
             <div class="box bb-0"><span class="boxtext"></span></div>
             <div class="box bb-0 br-0"><span class="boxtext"></span></div>
-        </div class="otherInfo">
+        </div>
         <div class="gameInfo">
             <h1>Welcome to Tic Tac Toe</h1>
             <div class="subText">
@@ -35,6 +36,7 @@
                 <img src="resources/excited.gif" alt="">
             </div>
         </div>
+
     </div>
 
 </body>
